--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">    
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vidrimax</title>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
+    <title>Vidrimax</title>
+
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>  <!-- todo Confirmacion de prueba en github -->
+  
+    <!-- !Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPQ0YG91K6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZPQ0YG91K6');
+</script>
   </body>
 </html>
